added user verification
